Agregar contacto y reorganizar enlaces de codigo

--- a/html-css-2/productos.html
+++ b/html-css-2/productos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Productos - Barbería Alura</title>
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="productos.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -12,7 +12,7 @@
                 <h1><img src="imagenes/logo.png"></h1>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="estructura.html">Home</a></li>
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
