--- a/html-css-2/contacto.html
+++ b/html-css-2/contacto.html
@@ -14,7 +14,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="estructura.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -59,7 +59,7 @@
 
                 <input type="submit" value="Enviar formulario" class="enviar">
             </form>
-            
+
             <table>
                 <thead>
                     <tr>
