--- a/responsive-layouts/index.html
+++ b/responsive-layouts/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apepeira Mobile First</title>
+    <link rel="stylesheet" href="css/head.css">
+    <link rel="stylesheet" href="css/llamada.css">
+    <link rel="stylesheet" href="css/planes.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    <header>
-        <img src="img/logo-apeperia.svg" alt="Logo de Apepeira">
-        <nav>
+    <header class="head">
+        <img class="head__logo" src="img/logo-apeperia.svg" alt="Logo de Apepeira">
+        <nav class="head__navegacion">
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Planes</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Destacados</a></li>
-                <li><a href="#">Institucional</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li class="head__enlace"><a href="#">Sobre</a></li>
+                <li class="head__enlace"><a href="#">Planes</a></li>
+                <li class="head__enlace"><a href="#">Blog</a></li>
+                <li class="head__enlace"><a href="#">Destacados</a></li>
+                <li class="head__enlace"><a href="#">Institucional</a></li>
+                <li class="head__enlace"><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h1>Aplicaciones en la medida</h1>
-            <p>Apeperia es una empresa emergente con una manera inovadora de comprar y crear aplicaciones móviles y web.</p>
-            <a href="#">Conozca los planes</a>
+        <section class="llamada">
+            <h1 class="llamada__titulo">Aplicaciones en la medida</h1>
+            <p class="llamada__texto">Apeperia es una empresa emergente con una manera inovadora de comprar y crear aplicaciones móviles y web.</p>
+            <a class="llamada__boton" href="#">Conozca los planes</a>
         </section>
     </main>
 </body>
-</html>
+</html> 
