--- a/responsive-layouts/index.html
+++ b/responsive-layouts/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/llamada.css">
     <link rel="stylesheet" href="css/planes.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/bases.css">
 </head>
 <body>
-    <header class="head">
+    <header class="head container">
         <img class="head__logo" src="img/logo-apeperia.svg" alt="Logo de Apepeira">
         <nav class="head__navegacion">
             <ul>
@@ -24,10 +25,10 @@
         </nav>
     </header>
     <main>
-        <section class="llamada">
+        <section class="llamada container">
             <h1 class="llamada__titulo">Aplicaciones en la medida</h1>
             <p class="llamada__texto">Apeperia es una empresa emergente con una manera inovadora de comprar y crear aplicaciones móviles y web.</p>
-            <a class="llamada__boton" href="#">Conozca los planes</a>
+            <a class="llamada__boton boton" href="#">Conozca los planes</a>
         </section>
     </main>
 </body>
