--- a/responsive-layouts/index.html
+++ b/responsive-layouts/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/sobre-nosotros.css">
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/institucional.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header class="head container">
@@ -135,7 +136,7 @@
             <a href="#" class="contacto__boton boton">Entre en contacto</a>
         </section>
 
-        <div class="section institucional container">
+        <section class="section institucional container">
             <h2 class="institucional__titulo">Institucional</h2>
             <p class="institucional__descrepcion">Un poco más sobre Apeperia</p>
             <address class="institucional__direccion">
@@ -149,7 +150,26 @@
                 </article>
             </address>
             <video src="img/formacion-java.mp4" class="institucional__video" controls></video>
-        </div>
+        </section>
+
+        <footer class="footer container">
+            <img src="img/logo-apeperia.svg" alt="" class="footer__logo">
+            <ul class="footer__social">
+                <li><a href="#" class="footer__midia"><img src="img/facebook.png" alt="Icono de Facebook"></a></li>
+                <li><a href="#" class="footer__midia"><img src="img/instagram.png" alt="Icono de Instagram"></a></li>
+                <li><a href="#" class="footer__midia"><img src="img/twitter.png" alt="Icono de Twitter"></a></li>
+            </ul>
+            <nav>
+                <ul class="footer__navegacion">
+                    <li class="footer__enlace"><a href="#">Sobre</a></li>
+                    <li class="footer__enlace"><a href="#">Planes</a></li>
+                    <li class="footer__enlace"><a href="#">Blog</a></li>
+                    <li class="footer__enlace"><a href="#">Destacados</a></li>
+                    <li class="footer__enlace"><a href="#">Institucional</a></li>
+                    <li class="footer__enlace"><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </footer>
     </main>
 </body>
 </html> 
