Agregar media queries

--- a/responsive-layouts/index.html
+++ b/responsive-layouts/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/planes.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/bases.css">
-    <link rel="stylesheet" href="css/destadados.css">
+    <link rel="stylesheet" href="css/destacados.css">
     <link rel="stylesheet" href="css/diferenciales.css">
     <link rel="stylesheet" href="css/sobre-nosotros.css">
     <link rel="stylesheet" href="css/contacto.css">
