--- a/responsive-layouts/index.html
+++ b/responsive-layouts/index.html
@@ -92,6 +92,7 @@
                 </ul>
                 <p class="sobre_nosotros__texto">Desarrollamos aplicaciones para todas plataformas</p>
             </div>
+            <img src="img/sobre-apeperia.png" alt="Sobre Nosotros" class="sobre_nosotros__imagen">
         </section>
 
         <section class="planes container">
@@ -138,18 +139,23 @@
 
         <section class="section institucional container">
             <h2 class="institucional__titulo">Institucional</h2>
-            <p class="institucional__descrepcion">Un poco más sobre Apeperia</p>
-            <address class="institucional__direccion">
-                Calle Vergueiro, 3185 <br>
-                Villa Mariana, São Paulo
-                <article class="institucional__contacto">
-                    <p>
-                        <a href="tel:+551155712751" class="institucional__contacto-telefono">+55 11 55712751</a> o 
-                        <a href="mailto:contato@apeperia.com" class="institucional__contacto-email">contato@apeperia.com</a>
-                    </p>
-                </article>
-            </address>
-            <video src="img/formacion-java.mp4" class="institucional__video" controls></video>
+            <div class="institucional__contenido">
+                <div class="institucional__informaciones">
+                    <p class="institucional__descrepcion">Un poco más sobre Apeperia</p>
+                    <address class="institucional__direccion">
+                        Calle Vergueiro, 3185 <br>
+                        Villa Mariana, São Paulo
+                        <article class="institucional__contacto">
+                            <p>
+                                <a href="tel:+551155712751" class="institucional__contacto-telefono">+55 11 55712751</a> o 
+                                <a href="mailto:contato@apeperia.com" class="institucional__contacto-email">contato@apeperia.com</a>
+                            </p>
+                        </article>
+                    </address>
+                </div>
+
+                <video src="img/formacion-java.mp4" class="institucional__video" controls></video>
+            </div>
         </section>
 
         <footer class="footer container">
