--- a/css-arquitectura/index.html
+++ b/css-arquitectura/index.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="assets/css/receta/receta-imagen.css">
     <link rel="stylesheet" href="assets/css/receta/receta-titulo.css">
     <link rel="stylesheet" href="assets/css/receta/receta.css">
+    <link rel="stylesheet" href="assets/css/quienes/quienes.css">
+    <link rel="stylesheet" href="assets/css/quienes/quienes-titulo.css">
+    <link rel="stylesheet" href="assets/css/quienes/quienes-descripcion.css">
 </head>
     <body>
       <header class="cabecera">
@@ -96,6 +99,28 @@
             <p class="receta__descripcion">Receta refrescante llena de vitaminas para tu desayuno.</p>
             <button class="receta__boton">Ver receta</button>
           </div>
+        </div>
+      </section>
+
+      <section class="quienes">
+        <h3 class="quienes__titulo">Quienes somos</h3>
+        <p class="quienes__descripcion">Conozca a la comunidad detrás de la iniciativa</p>
+        <div class="personas">
+            <div class="persona">
+                <div class="persona__imagen persona__imagen--roberta"></div>
+                <span class="persona__nombre">Roberta</span>
+                <span class="persona__funcion">Contenido</span>
+            </div>
+            <div class="persona">
+                <div class="persona__imagen persona__imagen--marcela"></div>
+                <span class="persona__nombre">Marcela</span>
+                <span class="persona__funcion">Chef de cocina</span>
+            </div>
+            <div class="persona">
+                <div class="persona__imagen persona__imagen--andreia"></div>
+                <span class="persona__nombre">Andréia</span>
+                <span class="persona__funcion">Pequeña Productora</span>
+            </div>
         </div>
       </section>
 
