Agregar contenido en click

--- a/js-dom/index.html
+++ b/js-dom/index.html
@@ -36,13 +36,9 @@
             </button>
           </form>
         </div>
-        <ul class="cardsList">
-          <li class="card">
-            <div>
-              <i class="far fa-check-square icon"></i>
-              <span class="task">Hacer curso de DOM</span>
-            </div>
-            <i class="fas fa-trash-alt trashIcon icon"></i>
+        <ul class="cardsList" data-list>
+          <li class="card" data-task>
+            
           </li>
           <li class="card">
             <div>
