--- a/js-formularios/registro.html
+++ b/js-formularios/registro.html
@@ -42,7 +42,7 @@
                 <fieldset>
                     <legend class="form__label">Información personal</legend>
                     <div class="input-container">
-                        <input name="birth" id="birth" class="input" type="date" placeholder="Fecha de nacimento" required>
+                        <input name="birth" id="birth" class="input" type="date" placeholder="Fecha de nacimento" required data-tipo="nacimiento">
                         <label class="input-label" for="birth">Fecha de nacimiento</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
@@ -75,6 +75,6 @@
         </section>
     </main>
 
-    <script src="./js/validaciones.js"></script>
+    <script src="./js/app.js" type="module"></script>
 </body>
 </html>
