Finalizar proyecto actualizando informacion

--- a/js-crud-clientes/screens/editar_cliente.html
+++ b/js-crud-clientes/screens/editar_cliente.html
@@ -72,5 +72,7 @@
         </form>
       </section>
     </main>
+
+    <script type="module" src="../controllers/actualizar.controller.js"></script>
   </body>
 </html>
